--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         this is so shocking isn't it.
       </h1>
 
-      <img src="ecologistwill.JPEG" alt="epic deep ecologist" width="100%" />
+      <img src="ecologistwill.png" alt="epic deep ecologist" width="100%" />
 
       <h3 style="border: 2px solid deeppink; text-align: center">
         congrats you have scrolled down! 🥳 🎉
